# TimeGrip-sync

./: .env.example  .gitignore  CMakeLists.txt  README.md  flake.nix  result  sync_calendar.py
.github/workflows/: sync.yml
deploy/: login_template.php
src/: adfs.cpp  adfs.hpp  db.cpp  db.hpp  env.hpp  gcal.cpp  gcal.hpp  http.cpp  http.hpp  main.cpp  period.hpp  report.cpp  report.hpp  timegrip.cpp  timegrip.hpp
